Scrollbar width financial fixed

--- a/src/Scss/Components/Shared/detail-modal.scss
+++ b/src/Scss/Components/Shared/detail-modal.scss
@@ -620,6 +620,9 @@
 .detailed-body-info {
   padding: 20px 40px 0px 40px;
   font-size: 14px;
+  ::-webkit-scrollbar{
+    width: 7px;
+  }
 
   .map-pop-00 h4 {
     font-size: 14px !important;
